modified:   .gitignore 	new file:   firebase-debug.log 	modified:   flask_session/2029240f6d1128be89ddc32729463129 	deleted:    log/2025-04-28_session.log 	deleted:    log/2025-04-29_session.log 	deleted:    log/2025-04-30_session.log 	deleted:    log/2025-05-01_session.log 	deleted:    log/2025-05-02_session.log

--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,11 @@
 .env
 .vscode/
 __pycache__/
-.gradio
-.venv
+.gradio/
+.venv/
 .idx/
-game_saves
-log
-temp_saves
+flask_session/
+game_saves/
+log/
+temp_saves/
+
