--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,133 @@
-# Dev environment
-pip
-autopep8
-
-# App
-langchain_core
-Pillow # PIL image-loading library
-
-#TODO: these requirements are not reliale. Verify and freeze
-flask-session
+aiofiles==23.2.1
+aiohappyeyeballs==2.4.3
+aiohttp==3.11.8
+aiosignal==1.3.1
+annotated-types==0.7.0
+anyio==4.6.2.post1
+asttokens==2.4.1
+attrs==24.2.0
+autopep8==2.3.1
+blinker==1.9.0
+CacheControl==0.14.2
+cachelib==0.13.0
+cachetools==5.5.0
+certifi==2024.8.30
+cffi==1.17.1
+charset-normalizer==3.4.0
+click==8.1.7
+cloudevents==1.9.0
+cryptography==44.0.2
+decorator==5.1.1
+deprecation==2.1.0
+eval_type_backport==0.2.0
+executing==2.1.0
+fastapi==0.115.5
+ffmpy==0.4.0
+filelock==3.16.1
+filetype==1.2.0
+firebase-admin==6.7.0
+firebase-functions==0.4.2
+Flask==3.1.0
+flask-cors==5.0.1
+Flask-Session==0.8.0
+frozenlist==1.5.0
+fsspec==2024.10.0
+functions-framework==3.8.2
+google-ai-generativelanguage==0.6.10
+google-api-core==2.23.0
+google-api-python-client==2.154.0
+google-auth==2.36.0
+google-auth-httplib2==0.2.0
+google-cloud-core==2.4.3
+google-cloud-firestore==2.20.2
+google-cloud-storage==3.1.0
+google-crc32c==1.7.1
+google-events==0.14.0
+google-generativeai==0.8.3
+google-resumable-media==2.7.2
+googleapis-common-protos==1.66.0
+gradio==5.7.0
+gradio_client==1.5.0
+grpcio==1.68.0
+grpcio-status==1.68.0
+gunicorn==23.0.0
+h11==0.14.0
+httpcore==1.0.7
+httplib2==0.22.0
+httpx==0.27.2
+huggingface-hub==0.26.3
+idna==3.10
+ipython==8.29.0
+itsdangerous==2.2.0
+jedi==0.19.2
+Jinja2==3.1.4
+jsonpatch==1.33
+jsonpointer==3.0.0
+langchain-core==0.3.21
+langchain-google-genai==2.0.6
+langsmith==0.1.147
+markdown-it-py==3.0.0
+MarkupSafe==2.1.5
+matplotlib-inline==0.1.7
+mdurl==0.1.2
+msgpack==1.1.0
+msgspec==0.19.0
+multidict==6.1.0
+numpy==2.1.3
+orjson==3.10.12
+packaging==24.2
+pandas==2.2.3
+parso==0.8.4
+pexpect==4.9.0
+pillow==10.4.0
+prompt_toolkit==3.0.48
+propcache==0.2.0
+proto-plus==1.25.0
+protobuf==5.29.0
+ptyprocess==0.7.0
+pure_eval==0.2.3
+pyarrow==18.1.0
+pyasn1==0.6.1
+pyasn1_modules==0.4.1
+pycodestyle==2.12.1
+pycparser==2.22
+pydantic==2.10.2
+pydantic_core==2.27.1
+pydub==0.25.1
+Pygments==2.18.0
+PyJWT==2.10.1
+pyparsing==3.2.0
+python-dateutil==2.9.0.post0
+python-dotenv==1.0.1
+python-multipart==0.0.12
+pytz==2024.2
+PyYAML==6.0.2
+requests==2.32.3
+requests-toolbelt==1.0.0
+rich==13.9.4
+rsa==4.9
+ruff==0.8.0
+safehttpx==0.1.1
+semantic-version==2.10.0
+shellingham==1.5.4
+six==1.16.0
+sniffio==1.3.1
+stack-data==0.6.3
+starlette==0.41.3
+tabulate==0.9.0
+tenacity==9.0.0
+together==1.3.5
+tomlkit==0.12.0
+tqdm==4.67.1
+traitlets==5.14.3
+typer==0.13.1
+typing_extensions==4.12.2
+tzdata==2024.2
+uritemplate==4.1.1
+urllib3==2.2.3
+uvicorn==0.32.1
+watchdog==6.0.0
+wcwidth==0.2.13
+websockets==12.0
+Werkzeug==3.1.3
+yarl==1.18.0
