--- a/requirements.txt
+++ b/requirements.txt
@@ -28,6 +28,7 @@ filetype==1.2.0
 firebase-admin==6.7.0
 firebase-functions==0.4.2
 Flask==3.1.0
+flask-bcrypt==1.0.1
 flask-cors==5.0.1
 Flask-Session==0.8.0
 frozenlist==1.5.0
