modified:   .dockerignore 	modified:   .gitignore 	new file:   SeuMundo_L1 copy.json 	new file:   Texts/Generalized RPG Mechanics and Game Path.markdown 	deleted:    YourWorld_L1.json 	modified:   app copy.py 	modified:   app.py 	new file:   config copy.json 	deleted:    example_world.txt 	modified:   handle_db.py 	modified:   main_flask.py 	new file:   requirements copy.txt 	modified:   static/image/output_image.png 	deleted:    temp.py 	new file:   templates/main_flask.py

--- a/.gitignore
+++ b/.gitignore
@@ -8,17 +8,16 @@ database/*
 flask_session/*
 log/*
 temp_saves/*
-templates/*_com_som.html
+templates/*copy.html
+texts/
 .env
 .firebaserc
 .dockerignore
-app_com_som.py
+*copy.py
 cloudbuild.yaml
 config.json
 #devserver*
 example_world.txt
 firebase.json
-main_flask_com_som.py
 main_gradio.py
-requirements_old.txt
 test_bench.py
