--- a/.dockerignore
+++ b/.dockerignore
@@ -4,16 +4,16 @@ __pycache__/
 .venv/
 .vscode/
 database/*
+docs/
 flask_session/*
 log/*
 temp_saves/*
 templates/*copy.html
-docs/
 .env
 #.dockerignore
 .firebaserc
 .gitignore
-*copy.py
+*copy*.py
 cloudbuild.yaml
 *copy.json
 config.json
