--- a/.gitignore
+++ b/.gitignore
@@ -4,20 +4,20 @@ __pycache__/
 .venv/
 .vscode/
 database/*
+docs/
 flask_session/*
 log/*
 temp_saves/*
 templates/*copy.html
-docs/
 .env
 .dockerignore
 .firebaserc
 #.gitignore
-*copy.py
+*copy*.py
 cloudbuild.yaml
 *copy.json
 config.json
-#devserver*
+devserver*
 firebase.json
 requirements*copy.txt
 test_bench.py
